--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,30 @@
+body {
+  background-color: #f9f7fe;
+}
+
 .App {
   text-align: center;
-  background-color:#f9f7fe;
+  background-color:white;
+  margin:60px;
+  padding:50px;
+  border-radius: 15px;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 42px;
+  max-width: 150px;
+  text-align: start;
+  display: block;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+footer{
+  font-size: 14px;
+  color: rgba(39, 33, 66, 0.4);
+  line-height: 18px;
+  font-weight: 400;;
 }
 
-.App-Logo {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer a {
+  color: #885df1;
 }
