changing to allow props

--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,13 @@ body {
 }
 
 .App {
-  text-align: center;
-  background-color:white;
-  margin:60px;
-  padding:50px;
-  border-radius: 15px;
   max-width: 788px;
+  font-family: "Cerebri-Sans", Helvetica, Arial, sans-serif;
+  background: white;
+  border-radius: 16px;
+  box-shadow: 0px 30px 50px rgba(65, 50, 100, 0.08);
+  padding: 40px;
+  color: rgb(135, 135, 135);
 }
 
 .App-logo {
@@ -33,11 +34,23 @@ footer a {
 .search-input{
   background-color: #f9f7fe !important;
   color: rgba(39, 33, 66, 0.4);
+  border: none;
+  padding: 15px 20px;
+  display: inline-block;
+  border-radius: 6px;
+  font-size: 16px;
+  height: 50px;
+  line-height: 20px;
 }
 
 form {
   margin: 40px 0 0; 
   padding: 0px 0px 30px;
+}
+.line-break{
+  border-bottom: 1px solid #eee;
+  width: 100%;
+  margin: 20px 0;
 }
 
 .btn-primary{
@@ -61,7 +74,8 @@ li{
 }
 
 .displayedcity {
-  font-size: 20px;
+  font-size: 38px;
+  font: Cerebri Sans, sans-serif;
   color: black;
   margin: 20px 0px 10px;
   font-size: 38px;
@@ -81,8 +95,9 @@ font-size: 18px;
 line-height: 27px;
 font-weight: 700;
 }
-.weather-forecast-temperature-max{
-opacity: 80% !important;
+.weather-forecast-temperature-min{
+opacity: 70% !important;
+margin-right:10px;
 }
 
 .unit{
