--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   background-color: #f9f7fe !important;
-  margin:0 auto !important;
+  margin: auto !important;
 }
 
 .App {
@@ -10,7 +10,13 @@ body {
   border-radius: 16px;
   box-shadow: 0px 30px 50px rgba(65, 50, 100, 0.08);
   padding: 40px;
-  color: rgb(135, 135, 135);
+  margin: 0 auto;
+  margin-top: 50px;
+}
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-logo {
@@ -34,7 +40,7 @@ footer a {
 .search-input{
   background-color: #f9f7fe !important;
   color: rgba(39, 33, 66, 0.4);
-  border: none;
+  border: none !important;
   padding: 15px 20px;
   display: inline-block;
   border-radius: 6px;
@@ -51,6 +57,8 @@ form {
   border-bottom: 1px solid #eee;
   width: 100%;
   margin: 20px 0;
+  color:#f9f7fe !important;
+  opacity: 50%;
 }
 
 .btn-primary{
@@ -58,8 +66,11 @@ form {
   color: white;
   border-radius: 5px;
   padding: 15px 0px;
-  border: none;
+  border: none !important;
   cursor: pointer;
+  font-weight: bold;
+  font-size: 16px;
+  height: 50px;
 }
 ul{
   padding: 0px !important;
@@ -73,14 +84,16 @@ li{
   margin: 0px !important;
 }
 
-.displayedcity {
-  font-size: 38px;
-  font: Cerebri Sans, sans-serif;
-  color: black;
-  margin: 20px 0px 10px;
-  font-size: 38px;
-  font-weight: 700px;
+.displayedcity h1 {
+  font-family: 'Cerebri Sans', Helvetica, Arial, sans-serif;
+  font-weight: bolder !important;
+  color: black !important;
   text-align:left !important;
+  margin: 20px 0 10px 0;
+  line-height: 29px;
+  font-weight: bold;
+  font-size: 38px;
+  line-height: 48px;
 }
 
 strong{
@@ -100,16 +113,20 @@ opacity: 70% !important;
 margin-right:10px;
 }
 
-.unit{
-  font-size: 28px;
-  color:black;
-  position:relative;
-}
 .temperature {
   font-size: 80px;
   color: black;
   font-weight: 700;
   margin-left: 10px;
+}
+.unit {
+  color: rgb(33, 33, 33);
+  font-size: 28px;
+  line-height: 36px;
+  font-weight: normal;
+  position: relative;
+  line-height: 1;
+  top: -34px;
 }
 .canvas{
   margin:10px 0 10px 0;
